syntax = "proto3";

package afrl.ntf.common.v1;

enum ClassificationLevel {
    CLASSIFICATION_LEVEL_UNDEFINED = 0;
    CLASSIFICATION_LEVEL_TS_SCI = 1;
    CLASSIFICATION_LEVEL_TOP_SECRET = 2;
    CLASSIFICATION_LEVEL_SECRET = 3;
    CLASSIFICATION_LEVEL_COALITION_SECRET = 4;
    CLASSIFICATION_LEVEL_COMMERCIAL_UNCLASSIFIED = 5;
}